--- a/uniparking-access-controller/docker-compose.yml
+++ b/uniparking-access-controller/docker-compose.yml
@@ -4,9 +4,18 @@ services:
     command: uvicorn app.main:app --host 0.0.0.0 --port 8080 --reload
     environment:
       - MQTT_HOST=mosquitto
-      - DATABASE_URL=postgresql://postgres:postgres@postgres:5432/uniparking
+      - DATABASE_URL=postgresql+asyncpg://postgres:postgres@postgres:5432/uniparking
+      - REDIS_URL=redis://redis:6379/0
+    volumes:
+      - .:/app
     ports: ["8080:8080"]
-    depends_on: [mosquitto, postgres]
+    depends_on:
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+      mosquitto:
+        condition: service_started
 
   redis:
     image: redis:7
@@ -24,13 +33,25 @@ services:
   mosquitto:
     image: eclipse-mosquitto:2
     ports: ["1883:1883"]
+    # opcional: healthcheck básico (mosquitto responde a connect)
+    healthcheck:
+      test: ["CMD-SHELL", "timeout 2 bash -c '</dev/tcp/localhost/1883' || exit 1"]
+      interval: 5s
+      timeout: 3s
+      retries: 20
 
   postgres:
     image: postgres:16
     environment:
+      POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: uniparking
     ports: ["5432:5432"]
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres -d uniparking"]
+      interval: 5s
+      timeout: 3s
+      retries: 20
 
 volumes:
   redis-data:
